# cltop

./: .gitignore  README.md  pyproject.toml
demo/: capture_demo.py
hook/: post_tool_use.sh
src/cltop/: __init__.py  app.py  discovery.py  hooks.py  models.py  pricing.py
src/cltop/widgets/: __init__.py  detail_panel.py  fleet_table.py  metrics_bar.py
tests/: __init__.py  test_discovery.py  test_hooks.py  test_models.py  test_pricing.py
